# vmwgfx-layout

./: CMakeLists.txt  README.md  setlayout.c
unit/: vmwgfx-setlayout.cmake
